--- a/Index.html
+++ b/Index.html
@@ -86,7 +86,7 @@
                     <p>MemoriGame - game trí nhớ</p>
                 </div>
                 <div class="project-item">
-                    <img src="starup.jpg" alt="Khởi nghiệp">
+                    <img src="starup.png" alt="Khởi nghiệp">
                     <p>Khởi nghiệp bán sữa gạo và panna cotta</p>
                 </div>
             </div>
